--- a/Cardapio/index.html
+++ b/Cardapio/index.html
@@ -4,7 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Cardápio da Lanchonete DS Burgers</title>
-        <link rel="stylesheet" href="estilos.css">
+        <link rel="stylesheet" href="./static/css/index.css">
+        <link
+            href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap"
+            rel="stylesheet">
     </head>
     <body>
 
@@ -17,6 +20,7 @@
             <article class="item-cardapio">
                 <h2>Java Burger</h2>
                 <p>Hamburguer de carne, queijo, alface e molho especial.</p>
+                <img src="/static/img/Java Burger.jpeg" alt="Java Burger">
                 <p class="preco">R$ 25,99</p>
                 <label>
                     <input type="checkbox" name="pedido" value="25.99">
@@ -28,6 +32,7 @@
                 <h2>JavaScript Joy</h2>
                 <p>Hamburguer vegetariano com hambúrguer de quinoa, abobrinha
                     grelhada, alface e molho de ervas.</p>
+                <img src="/static/img/JavaScript Joy.jpg" alt="JavaScript Joy">
                 <p class="preco">R$ 23,99</p>
                 <label>
                     <input type="checkbox" name="pedido" value="23.99">
@@ -39,6 +44,7 @@
                 <h2>HTML Heat</h2>
                 <p>Hamburguer de carne, bacon, queijo pepper jack, jalapeños e
                     molho picante.</p>
+                <img src="/static/img/HTML Heat.jpg" alt="HTML Heat">
                 <p class="preco">R$ 29,99</p>
                 <label>
                     <input type="checkbox" name="pedido" value="29.99">
@@ -50,6 +56,7 @@
                 <h2>SQL Supreme</h2>
                 <p>Hamburguer de carne, queijo suíço, cogumelos e molho de
                     alho.</p>
+                <img src="/static/img/SQL Supreme.jpeg" alt="SQL Supreme">
                 <p class="preco">R$ 26,99</p>
                 <label>
                     <input type="checkbox" name="pedido" value="26.99">
@@ -61,6 +68,7 @@
                 <h2>React Vegano</h2>
                 <p>Hamburguer vegano com hambúrguer de grão-de-bico, abacate,
                     tomate e molho vegano.</p>
+                <img src="/static/img/React Vegano.png" alt="React Vegano">
                 <p class="preco">R$ 21,99</p>
                 <label>
                     <input type="checkbox" name="pedido" value="21.99">
@@ -72,6 +80,7 @@
                 <h2>Swift Sensation</h2>
                 <p>Hamburguer de frango, queijo suíço, cogumelos e maionese de
                     mostarda.</p>
+                <img src="/static/img/Swift Sensation.jpeg" alt="Swift Sensation">
                 <p class="preco">R$ 28,99</p>
                 <label>
                     <input type="checkbox" name="pedido" value="28.99">
@@ -83,6 +92,7 @@
                 <h2>CSS Crunch</h2>
                 <p>Hamburguer vegetariano com hambúrguer de lentilha, cebola
                     caramelizada, alface e maionese de alho.</p>
+                <img src="/static/img/CSS Crunch.webp" alt="CSS Crunch">
                 <p class="preco">R$ 24,99</p>
                 <label>
                     <input type="checkbox" name="pedido" value="24.99">
@@ -94,6 +104,7 @@
                 <h2>Angular Adventure</h2>
                 <p>Hamburguer de carne, queijo suíço, picles, cebola roxa e
                     molho de mostarda e mel.</p>
+                <img src="/static/img/Angular Adventure.jpg" alt="Angular Adventure">
                 <p class="preco">R$ 32,99</p>
                 <label>
                     <input type="checkbox" name="pedido" value="32.99">
@@ -105,6 +116,7 @@
                 <h2>Ruby Royale</h2>
                 <p>Hamburguer vegetariano com hambúrguer de feijão preto,
                     abacate, tomate e molho de iogurte.</p>
+                <img src="/static/img/Ruby Royale.jpeg" alt="Ruby Royale">
                 <p class="preco">R$ 25,99</p>
                 <label>
                     <input type="checkbox" name="pedido" value="25.99">
@@ -116,6 +128,7 @@
                 <h2>PHP Fusion</h2>
                 <p>Hamburguer de carne, queijo provolone, cogumelos salteados e
                     molho de cebola caramelizada.</p>
+                <img src="/static/img/PHP Fusion.jpg" alt="PHP Fusion">
                 <p class="preco">R$ 30,99</p>
                 <label>
                     <input type="checkbox" name="pedido" value="30.99">
@@ -127,6 +140,7 @@
                 <h2>Go Gourmet</h2>
                 <p>Hamburguer vegetariano com hambúrguer de grão-de-bico,
                     abobrinha grelhada, pimentões e molho de tahine.</p>
+                <img src="/static/img/Go Gourmet.jpg" alt="Go Gourmet">
                 <p class="preco">R$ 26,99</p>
                 <label>
                     <input type="checkbox" name="pedido" value="26.99">
@@ -138,6 +152,7 @@
                 <h2>TypeScript Tasty</h2>
                 <p>Hamburguer de frango, queijo gouda, abacate e maionese de
                     ervas.</p>
+                <img src="/static/img/TypeScript Tasty.jpg" alt="TypeScript Tasty">
                 <p class="preco">R$ 31,99</p>
                 <label>
                     <input type="checkbox" name="pedido" value="31.99">
@@ -149,6 +164,7 @@
                 <h2>Perl Perfection</h2>
                 <p>Hamburguer vegetariano com hambúrguer de lentilha, queijo
                     feta, azeitonas e molho de tzatziki.</p>
+                <img src="/static/img/Perl Perfection.jpg" alt="Perl Perfection">
                 <p class="preco">R$ 27,99</p>
                 <label>
                     <input type="checkbox" name="pedido" value="27.99">
@@ -160,6 +176,7 @@
                 <h2>Scala Supreme</h2>
                 <p>Hamburguer de carne, queijo gorgonzola, cebola roxa
                     caramelizada e rúcula.</p>
+                <img src="/static/img/Scala Supreme.jpg" alt="Scala Supreme">
                 <p class="preco">R$ 33,99</p>
                 <label>
                     <input type="checkbox" name="pedido" value="33.99">
@@ -168,20 +185,10 @@
             </article>
 
             <article class="item-cardapio">
-                <h2>Perl Perfection</h2>
-                <p>Hamburguer vegetariano com hambúrguer de lentilha, queijo
-                    feta, azeitonas e molho de tzatziki.</p>
-                <p class="preco">R$ 27,99</p>
-                <label>
-                    <input type="checkbox" name="pedido" value="27.99">
-                    Selecionar
-                </label>
-            </article>
-
-            <article class="item-cardapio">
                 <h2>DevOps Delight</h2>
                 <p>Hamburguer de carne, bacon, queijo suíço, cogumelos e
                     maionese de alho.</p>
+                <img src="/static/img/DevOps Delight.webp" alt="DevOps Delight">
                 <p class="preco">R$ 34,99</p>
                 <label>
                     <input type="checkbox" name="pedido" value="34.99">
@@ -193,6 +200,7 @@
                 <h2>Vue Vegano</h2>
                 <p>Hamburguer vegano com hambúrguer de grão-de-bico, abobrinha
                     grelhada, alface e maionese vegana.</p>
+                <img src="/static/img/Vue Vegano.jpeg" alt="Vue Vegano">
                 <p class="preco">R$ 28,99</p>
                 <label>
                     <input type="checkbox" name="pedido" value="28.99">
@@ -204,6 +212,7 @@
                 <h2>Vegan Script</h2>
                 <p>Hamburguer vegano com hambúrguer de grão-de-bico, alface,
                     tomate e molho vegano.</p>
+                <img src="/static/img/Vegan Script.jpg" alt="Vegan Script">
                 <p class="preco">R$ 19,99</p>
                 <label>
                     <input type="checkbox" name="pedido" value="19.99">
