--- a/Cardapio/index.html
+++ b/Cardapio/index.html
@@ -235,6 +235,6 @@
             <p>&copy; 2024 DS Burgers. Todos os direitos reservados.</p>
         </footer>
 
-        <script src="script.js"></script>
+        <script src="./static/js/Index.js"></script>
     </body>
 </html>
