--- a/Cardapio/index.html
+++ b/Cardapio/index.html
@@ -23,9 +23,18 @@
                 <img src="/static/img/Java Burger.jpeg" alt="Java Burger">
                 <p class="preco">R$ 25,99</p>
                 <label>
-                    <input type="checkbox" name="pedido" value="25.99">
+                    <input class="checar" type="checkbox" name="pedido"
+                        value="25.99">
                     Selecionar
                 </label>
+                <!-- Contador -->
+                <div class="contador">
+                    <button class="somar"
+                        onclick="decrementarContador (this)">-</button>
+                    <span>0</span>
+                    <button class="subtrair"
+                        onclick="incrementarContador (this)">+</button>
+                </div>
             </article>
 
             <article class="item-cardapio">
@@ -35,9 +44,18 @@
                 <img src="/static/img/JavaScript Joy.jpg" alt="JavaScript Joy">
                 <p class="preco">R$ 23,99</p>
                 <label>
-                    <input type="checkbox" name="pedido" value="23.99">
+                    <input class="checar" type="checkbox" name="pedido"
+                        value="23.99">
                     Selecionar
                 </label>
+                <!-- Contador -->
+                <div class="contador">
+                    <button class="somar"
+                        onclick="decrementarContador (this)">-</button>
+                    <span>0</span>
+                    <button class="subtrair"
+                        onclick="incrementarContador (this)">+</button>
+                </div>
             </article>
 
             <article class="item-cardapio">
@@ -47,9 +65,18 @@
                 <img src="/static/img/HTML Heat.jpg" alt="HTML Heat">
                 <p class="preco">R$ 29,99</p>
                 <label>
-                    <input type="checkbox" name="pedido" value="29.99">
+                    <input class="checar" type="checkbox" name="pedido"
+                        value="29.99">
                     Selecionar
                 </label>
+                <!-- Contador -->
+                <div class="contador">
+                    <button class="somar"
+                        onclick="decrementarContador (this)">-</button>
+                    <span>0</span>
+                    <button class="subtrair"
+                        onclick="incrementarContador (this)">+</button>
+                </div>
             </article>
 
             <article class="item-cardapio">
@@ -59,9 +86,18 @@
                 <img src="/static/img/SQL Supreme.jpeg" alt="SQL Supreme">
                 <p class="preco">R$ 26,99</p>
                 <label>
-                    <input type="checkbox" name="pedido" value="26.99">
+                    <input class="checar" type="checkbox" name="pedido"
+                        value="26.99">
                     Selecionar
                 </label>
+                <!-- Contador -->
+                <div class="contador">
+                    <button class="somar"
+                        onclick="decrementarContador (this)">-</button>
+                    <span>0</span>
+                    <button class="subtrair"
+                        onclick="incrementarContador (this)">+</button>
+                </div>
             </article>
 
             <article class="item-cardapio">
@@ -71,21 +107,40 @@
                 <img src="/static/img/React Vegano.png" alt="React Vegano">
                 <p class="preco">R$ 21,99</p>
                 <label>
-                    <input type="checkbox" name="pedido" value="21.99">
+                    <input class="checar" type="checkbox" name="pedido"
+                        value="21.99">
                     Selecionar
                 </label>
+                <!-- Contador -->
+                <div class="contador">
+                    <button class="somar"
+                        onclick="decrementarContador (this)">-</button>
+                    <span>0</span>
+                    <button class="subtrair"
+                        onclick="incrementarContador (this)">+</button>
+                </div>
             </article>
 
             <article class="item-cardapio">
                 <h2>Swift Sensation</h2>
                 <p>Hamburguer de frango, queijo suíço, cogumelos e maionese de
                     mostarda.</p>
-                <img src="/static/img/Swift Sensation.jpeg" alt="Swift Sensation">
+                <img src="/static/img/Swift Sensation.jpeg"
+                    alt="Swift Sensation">
                 <p class="preco">R$ 28,99</p>
                 <label>
-                    <input type="checkbox" name="pedido" value="28.99">
+                    <input class="checar" type="checkbox" name="pedido"
+                        value="28.99">
                     Selecionar
                 </label>
+                <!-- Contador -->
+                <div class="contador">
+                    <button class="somar"
+                        onclick="decrementarContador (this)">-</button>
+                    <span>0</span>
+                    <button class="subtrair"
+                        onclick="incrementarContador (this)">+</button>
+                </div>
             </article>
 
             <article class="item-cardapio">
@@ -95,21 +150,40 @@
                 <img src="/static/img/CSS Crunch.webp" alt="CSS Crunch">
                 <p class="preco">R$ 24,99</p>
                 <label>
-                    <input type="checkbox" name="pedido" value="24.99">
+                    <input class="checar" type="checkbox" name="pedido"
+                        value="24.99">
                     Selecionar
                 </label>
+                <!-- Contador -->
+                <div class="contador">
+                    <button class="somar"
+                        onclick="decrementarContador (this)">-</button>
+                    <span>0</span>
+                    <button class="subtrair"
+                        onclick="incrementarContador (this)">+</button>
+                </div>
             </article>
 
             <article class="item-cardapio">
                 <h2>Angular Adventure</h2>
                 <p>Hamburguer de carne, queijo suíço, picles, cebola roxa e
                     molho de mostarda e mel.</p>
-                <img src="/static/img/Angular Adventure.jpg" alt="Angular Adventure">
+                <img src="/static/img/Angular Adventure.jpg"
+                    alt="Angular Adventure">
                 <p class="preco">R$ 32,99</p>
                 <label>
-                    <input type="checkbox" name="pedido" value="32.99">
+                    <input class="checar" type="checkbox" name="pedido"
+                        value="32.99">
                     Selecionar
                 </label>
+                <!-- Contador -->
+                <div class="contador">
+                    <button class="somar"
+                        onclick="decrementarContador (this)">-</button>
+                    <span>0</span>
+                    <button class="subtrair"
+                        onclick="incrementarContador (this)">+</button>
+                </div>
             </article>
 
             <article class="item-cardapio">
@@ -119,9 +193,18 @@
                 <img src="/static/img/Ruby Royale.jpeg" alt="Ruby Royale">
                 <p class="preco">R$ 25,99</p>
                 <label>
-                    <input type="checkbox" name="pedido" value="25.99">
+                    <input class="checar" type="checkbox" name="pedido"
+                        value="25.99">
                     Selecionar
                 </label>
+                <!-- Contador -->
+                <div class="contador">
+                    <button class="somar"
+                        onclick="decrementarContador (this)">-</button>
+                    <span>0</span>
+                    <button class="subtrair"
+                        onclick="incrementarContador (this)">+</button>
+                </div>
             </article>
 
             <article class="item-cardapio">
@@ -131,9 +214,18 @@
                 <img src="/static/img/PHP Fusion.jpg" alt="PHP Fusion">
                 <p class="preco">R$ 30,99</p>
                 <label>
-                    <input type="checkbox" name="pedido" value="30.99">
+                    <input class="checar" type="checkbox" name="pedido"
+                        value="30.99">
                     Selecionar
                 </label>
+                <!-- Contador -->
+                <div class="contador">
+                    <button class="somar"
+                        onclick="decrementarContador (this)">-</button>
+                    <span>0</span>
+                    <button class="subtrair"
+                        onclick="incrementarContador (this)">+</button>
+                </div>
             </article>
 
             <article class="item-cardapio">
@@ -143,33 +235,62 @@
                 <img src="/static/img/Go Gourmet.jpg" alt="Go Gourmet">
                 <p class="preco">R$ 26,99</p>
                 <label>
-                    <input type="checkbox" name="pedido" value="26.99">
+                    <input class="checar" type="checkbox" name="pedido"
+                        value="26.99">
                     Selecionar
                 </label>
+                <!-- Contador -->
+                <div class="contador">
+                    <button class="somar"
+                        onclick="decrementarContador (this)">-</button>
+                    <span>0</span>
+                    <button class="subtrair"
+                        onclick="incrementarContador (this)">+</button>
+                </div>
             </article>
 
             <article class="item-cardapio">
                 <h2>TypeScript Tasty</h2>
                 <p>Hamburguer de frango, queijo gouda, abacate e maionese de
                     ervas.</p>
-                <img src="/static/img/TypeScript Tasty.jpg" alt="TypeScript Tasty">
+                <img src="/static/img/TypeScript Tasty.jpg"
+                    alt="TypeScript Tasty">
                 <p class="preco">R$ 31,99</p>
                 <label>
-                    <input type="checkbox" name="pedido" value="31.99">
+                    <input class="checar" type="checkbox" name="pedido"
+                        value="31.99">
                     Selecionar
                 </label>
+                <!-- Contador -->
+                <div class="contador">
+                    <button class="somar"
+                        onclick="decrementarContador (this)">-</button>
+                    <span>0</span>
+                    <button class="subtrair"
+                        onclick="incrementarContador (this)">+</button>
+                </div>
             </article>
 
             <article class="item-cardapio">
                 <h2>Perl Perfection</h2>
                 <p>Hamburguer vegetariano com hambúrguer de lentilha, queijo
                     feta, azeitonas e molho de tzatziki.</p>
-                <img src="/static/img/Perl Perfection.jpg" alt="Perl Perfection">
+                <img src="/static/img/Perl Perfection.jpg"
+                    alt="Perl Perfection">
                 <p class="preco">R$ 27,99</p>
                 <label>
-                    <input type="checkbox" name="pedido" value="27.99">
+                    <input class="checar" type="checkbox" name="pedido"
+                        value="27.99">
                     Selecionar
                 </label>
+                <!-- Contador -->
+                <div class="contador">
+                    <button class="somar"
+                        onclick="decrementarContador (this)">-</button>
+                    <span>0</span>
+                    <button class="subtrair"
+                        onclick="incrementarContador (this)">+</button>
+                </div>
             </article>
 
             <article class="item-cardapio">
@@ -179,9 +300,18 @@
                 <img src="/static/img/Scala Supreme.jpg" alt="Scala Supreme">
                 <p class="preco">R$ 33,99</p>
                 <label>
-                    <input type="checkbox" name="pedido" value="33.99">
+                    <input class="checar" type="checkbox" name="pedido"
+                        value="33.99">
                     Selecionar
                 </label>
+                <!-- Contador -->
+                <div class="contador">
+                    <button class="somar"
+                        onclick="decrementarContador (this)">-</button>
+                    <span>0</span>
+                    <button class="subtrair"
+                        onclick="incrementarContador (this)">+</button>
+                </div>
             </article>
 
             <article class="item-cardapio">
@@ -191,9 +321,18 @@
                 <img src="/static/img/DevOps Delight.webp" alt="DevOps Delight">
                 <p class="preco">R$ 34,99</p>
                 <label>
-                    <input type="checkbox" name="pedido" value="34.99">
+                    <input class="checar" type="checkbox" name="pedido"
+                        value="34.99">
                     Selecionar
                 </label>
+                <!-- Contador -->
+                <div class="contador">
+                    <button class="somar"
+                        onclick="decrementarContador (this)">-</button>
+                    <span>0</span>
+                    <button class="subtrair"
+                        onclick="incrementarContador (this)">+</button>
+                </div>
             </article>
 
             <article class="item-cardapio">
@@ -203,9 +342,18 @@
                 <img src="/static/img/Vue Vegano.jpeg" alt="Vue Vegano">
                 <p class="preco">R$ 28,99</p>
                 <label>
-                    <input type="checkbox" name="pedido" value="28.99">
+                    <input class="checar" type="checkbox" name="pedido"
+                        value="28.99">
                     Selecionar
                 </label>
+                <!-- Contador -->
+                <div class="contador">
+                    <button class="somar"
+                        onclick="decrementarContador (this)">-</button>
+                    <span>0</span>
+                    <button class="subtrair"
+                        onclick="incrementarContador (this)">+</button>
+                </div>
             </article>
 
             <article class="item-cardapio">
@@ -215,9 +363,18 @@
                 <img src="/static/img/Vegan Script.jpg" alt="Vegan Script">
                 <p class="preco">R$ 19,99</p>
                 <label>
-                    <input type="checkbox" name="pedido" value="19.99">
+                    <input class="checar" type="checkbox" name="pedido"
+                        value="19.99">
                     Selecionar
                 </label>
+                <!-- Contador -->
+                <div class="contador">
+                    <button class="somar"
+                        onclick="decrementarContador (this)">-</button>
+                    <span>0</span>
+                    <button class="subtrair"
+                        onclick="incrementarContador (this)">+</button>
+                </div>
             </article> <!-- Fim dos itens do cardápio -->
         </section>
 
@@ -226,8 +383,8 @@
             <form id="formulario-pedido">
                 <!-- Os itens selecionados serão exibidos aqui -->
                 <p id="total">Total: R$ 0,00</p>
-                <button type="button" onclick="enviarPedido()">Enviar
-                    Pedido</button>
+                <button type="button" id="enviar"
+                    onclick="enviarPedido()">Enviar Pedido</button>
             </form>
         </section>
 
